--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           go-version: 1.18
       - name: Build and Test
-        shell: cmd
         working-directory: src
-        run: all.bat
+        run: cmd.exe /c '.\all.bat'
+        # shell: cmd
+        # run: |
+        #   all.bat
